--- a/index.html
+++ b/index.html
@@ -139,15 +139,18 @@
 		<section class="bgSection">
 			<div class="mainCon">
 				<h2>SKINTYPE <span>제품추천</span></h2>
-				<div class="tabListType2">
+				<div class="tabListType2 mainTab1">
 					<ul>
 						<li><a href="#">민감성피부</a></li>
-						<li class="current"><a href="#">건성/노화피부</a></li>
+						<li><a href="#">건성/노화피부</a></li>
 						<li><a href="#">기미/잡티/색소피부</a></li>
 						<li><a href="#">지성/여드름피부</a></li>
 						<li><a href="#">모든피부</a></li>
 					</ul>
 				</div>
+				<script type="text/javascript">
+				 tabMenu($('mainTab1'),0);
+				</script>
 				<div class="prodList">
 					<ul>
 						<li>
@@ -223,12 +226,15 @@
 		<div class="mainCon">
 			<section>
 				<h2><span>이달의</span> 판매랭킹</h2>
-				<div class="tabListType2">
+				<div class="tabListType2 mainTab2">
 					<ul>
 						<li class="current"><a href="#">제품종류별</a></li>
 						<li><a href="#">브랜드별</a></li>
 					</ul>
 				</div>
+				<script type="text/javascript">
+				 tabMenu($('mainTab2'),0);
+				</script>
 				<div class="prodList">
 					<ul class="prodListType3">
 						<li class="rank1">
