--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</ul>
 				</div>
 				<script type="text/javascript">
-				 tabMenu($('mainTab1'),0);
+				 tabMenu($('.mainTab1'),0);
 				</script>
 				<div class="prodList">
 					<ul>
@@ -228,12 +228,12 @@
 				<h2><span>이달의</span> 판매랭킹</h2>
 				<div class="tabListType2 mainTab2">
 					<ul>
-						<li class="current"><a href="#">제품종류별</a></li>
+						<li><a href="#">제품종류별</a></li>
 						<li><a href="#">브랜드별</a></li>
 					</ul>
 				</div>
 				<script type="text/javascript">
-				 tabMenu($('mainTab2'),0);
+				 tabMenu($('.mainTab2'),0);
 				</script>
 				<div class="prodList">
 					<ul class="prodListType3">
