--- a/layout.html
+++ b/layout.html
@@ -18,7 +18,7 @@
 
 	<header id="header">
 		<div class="headTop">
-			<p class="headAlert"><a href="#" class="on">알림 <span>2</span></a></p>
+			<p class="headAlert"><a href="#" class="on">알림 <span>2</span></a></p> <!-- 알림이 있을시 a 링크에 class="on" -->
 			<p class="headLink">
 				<a href="#" class="member">제제양님</a>
 				<a href="#">로그인</a>
@@ -44,9 +44,9 @@
 		<nav id="gnb">
 			<ul>
 				<li><a href="#">제품종류별</a>
-					<div class="depth2">
+					<div class="dep2">
 						<ul>
-							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 민감성피부</a></li>
+							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 1민감성피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_2.gif" alt="" /> 건성/노화피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 기미/잡티/색소피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_4.gif" alt="" /> 지성/여드름피부</a></li>
@@ -55,9 +55,9 @@
 					</div>
 				</li>
 				<li><a href="#">피부타입별</a>
-					<div class="depth2">
+					<div class="dep2">
 						<ul>
-							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 민감성피부</a></li>
+							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 2민감성피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_2.gif" alt="" /> 건성/노화피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 기미/잡티/색소피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_4.gif" alt="" /> 지성/여드름피부</a></li>
@@ -66,9 +66,9 @@
 					</div>
 				</li>
 				<li><a href="#">브랜드존</a>
-					<div class="depth2">
+					<div class="dep2">
 						<ul>
-							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 민감성피부</a></li>
+							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 3민감성피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_2.gif" alt="" /> 건성/노화피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 기미/잡티/색소피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_4.gif" alt="" /> 지성/여드름피부</a></li>
@@ -77,9 +77,9 @@
 					</div>
 				</li>
 				<li><a href="#">REVIEW</a>
-					<div class="depth2">
+					<div class="dep2">
 						<ul>
-							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 민감성피부</a></li>
+							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 4민감성피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_2.gif" alt="" /> 건성/노화피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 기미/잡티/색소피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_4.gif" alt="" /> 지성/여드름피부</a></li>
@@ -88,9 +88,9 @@
 					</div>
 				</li>
 				<li class="mediSkin"><a href="#">메디스킨</a>
-					<div class="depth2">
+					<div class="dep2">
 						<ul>
-							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 민감성피부</a></li>
+							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 5민감성피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_2.gif" alt="" /> 건성/노화피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_1.gif" alt="" /> 기미/잡티/색소피부</a></li>
 							<li><a href="#"><img src="images/img_gnb2_4.gif" alt="" /> 지성/여드름피부</a></li>
@@ -170,6 +170,10 @@
 			</div>
 		</div>
 	</footer>
+
+	<script type="text/javascript">
+	menu(2,1); // 메뉴활성화
+	</script>
 
 </body>
 </html>
