--- a/layout.html
+++ b/layout.html
@@ -14,8 +14,11 @@
 <!--[if lt IE 9]>
     <script src="js/html5shiv.min.js"></script>
 <![endif]-->
+</head>
+
 <body>
 
+	<!-- header -->
 	<header id="header">
 		<div class="headTop">
 			<p class="headAlert"><a href="#" class="on">알림 <span>2</span></a></p> <!-- 알림이 있을시 a 링크에 class="on" -->
@@ -101,6 +104,7 @@
 			</ul>
 		</nav>
 	</header>
+	<!-- //header -->
 
 	<section id="container">
 		<div class="pageHead">
