--- a/login.html
+++ b/login.html
@@ -108,61 +108,41 @@
 
 	<!-- container -->
 	<section id="container">
-		<div class="pageHead">
-			<h1 class="pageTitle">장바구니</h1>
-			<!--ol class="orderProgress">
-				<li class="current">01 장바구니</li>
-				<li>02 주문/결제</li>
-				<li>03 결제완료</li>
-			</ol-->
-			<p class="location">
-				<a href="#">Home</a> &gt;
-				<span>products</span>
-			</p>
-		</div>
 		<div class="contents">
-		
-			<h1 class="memTitle">타이틀</h1>
+			<h1 class="memTitle">로그인</h1>
+			<div class="loginWrap">
 
-			<hr>
+				<div>
+					<h2 class="subTitle">회원로그인</h2>
+					<fieldset>
+						<legend>회원로그인</legend>
+						<p><input type="text" class="inputTxt" placeholder="아이디" /></p>
+						<p><input type="password" class="inputTxt" placeholder="비밀번호" /></p>
+						<p><button type="submit" class="btnB btnType4">로그인</button></p>
+						<p><label class="chkB"><input type="checkbox" class="inputChk" /> <span>아이디 기억하기</span></label></p>
+					</fieldset>
+					<p class="loginLink">
+						<a href="#">아이디 찾기</a>
+						<span class="bar">|</span>
+						<a href="#">비밀번호 찾기</a>
+						<span class="bar">|</span>
+						<a href="#">회원가입</a>
+					</p>
+				</div>
 
-			<label class="chkB"><input type="checkbox" class="inputChk" /> <span>디자인 체크박스</span></label>
-			<br />
-			<label class="radioB"><input type="radio" name="sample" class="inputChk" /> <span>디자인 라디오</span></label>
-			<label class="radioB"><input type="radio" name="sample" class="inputChk" /> <span>디자인 라디오</span></label>
+				<div>
+					<h2 class="subTitle"><b>SNS</b> 간편로그인</h2>
+					<p class="btn">
+						<a href="#" class="btnB btnFacebook">페이스북 로그인</a>
+						<a href="#" class="btnB btnNaver">네이버 로그인</a>
+					</p>
 
-			<hr>
+					<h2 class="subTitle" style="margin:40px 0 0;">비회원 구매</h2>
+					<p class="btn"><a href="#" class="btnB btnType5">비회원으로 주문하기</a></p>
+					<p class="tip">비회원 주문시, 쿠폰및 포인트가 제공되지 않습니다.</p>
+				</div>
 
-			<p>
-				<button type="button" class="btnM btnType1">버튼타입1</button>
-				<a href="#" class="btnM btnType1">링크</a>
-			</p>
-			<br />
-			<p>
-				<button type="button" class="btnB btnType2">버튼타입2</button>
-				<a href="#" class="btnB btnType2">링크</a>
-			</p>
-			<br />
-			<p> 
-				<button type="button" class="btnS btnType3">버튼타입3</button>
-				<a href="#" class="btnS btnType3">링크</a>
-			</p>
-			<br />
-			<p> 
-				<button type="button" class="btnB btnType4">버튼타입4</button>
-				<a href="#" class="btnB btnType4">링크</a>
-			</p>
-			<br />
-			<p> 
-				<button type="button" class="btnB btnType5">버튼타입5</button>
-				<a href="#" class="btnB btnType5">링크</a>
-			</p>
-			<br />
-			<p>
-				<a href="#" class="btnB btnFacebook" style="width:250px;">페이스북 로그인</a>
-				<a href="#" class="btnB btnNaver" style="width:250px;">네이버 로그인</a>
-			</p>
-			<hr>
+			</div>
 		</div>
 	</section>
 	<!-- //container -->
@@ -219,6 +199,7 @@
 		</div>
 	</footer>
 	<!-- //footer -->
+
 	<script type="text/javascript">
 	menu(2,1); // 메뉴활성화
 	</script>
