--- a/layout.html
+++ b/layout.html
@@ -110,19 +110,24 @@
 	<section id="container">
 		<div class="pageHead">
 			<h1 class="pageTitle">장바구니</h1>
-			<!--ol class="orderProgress">
-				<li class="current">01 장바구니</li>
-				<li>02 주문/결제</li>
-				<li>03 결제완료</li>
-			</ol-->
 			<p class="location">
 				<a href="#">Home</a> &gt;
 				<span>products</span>
 			</p>
 		</div>
+		<div class="pageHead">
+			<h1 class="pageTitle">장바구니</h1>
+			<ol class="orderProgress">
+				<li class="current">01 장바구니</li>
+				<li>02 주문/결제</li>
+				<li>03 결제완료</li>
+			</ol>
+		</div>
 		<div class="contents">
 		
 			<h1 class="memTitle">타이틀</h1>
+			<h2 class="subTitle">서브타이틀</h2>
+			<h2 class="subTitle2">서브타이틀2</h2>
 
 			<hr>
 
@@ -158,11 +163,253 @@
 				<a href="#" class="btnB btnType5">링크</a>
 			</p>
 			<br />
+			<p> 
+				<button type="button" class="btnM2 btnType6">버튼타입6</button>
+				<a href="#" class="btnM2 btnType6">링크</a>
+			</p>
+			<br />
+			<p> 
+				<button type="button" class="btnB btnType7">버튼타입7</button>
+				<a href="#" class="btnB btnType7">링크</a>
+			</p>
+			<br />
 			<p>
 				<a href="#" class="btnB btnFacebook" style="width:250px;">페이스북 로그인</a>
 				<a href="#" class="btnB btnNaver" style="width:250px;">네이버 로그인</a>
 			</p>
+
 			<hr>
+			<div class="tabList tabItem4">
+				<ul>
+					<li class="current"><a href="#">취소/환불/반품안내</a></li>
+					<li><a href="#">제품문의</a></li>
+					<li><a href="#">회원/등급/마일리지</a></li>
+					<li><a href="#">기타</a></li>
+				</ul>
+			</div>
+
+			<br />
+
+			<div class="tabListType2">
+				<ul>
+					<li class="current"><a href="#">민감성피부</a></li>
+					<li><a href="#">건성/노화피부</a></li>
+					<li><a href="#">기미/잡티/색소피부</a></li>
+					<li><a href="#">지성/여드름피부</a></li>
+					<li><a href="#">모든피부</a></li>
+				</ul>
+			</div>
+			<hr>
+
+			<h2 class="subTitle2">게시판</h2>
+			<fieldset class="bbsSearch">
+				<legend>검색입력</legend>
+				<select>
+					<option>전체 선택</option>
+				</select>
+				<input type="text" class="inputTxt" />
+				<button type="submit" class="btnSearch">검색</button>
+			</fieldset>
+
+			<div class="bbsList">
+				<table>
+					<caption>1:1문의 게시판</caption>
+					<colgroup>
+						<col style="width:85px" />
+						<col />
+						<col style="width:170px" />
+						<col style="width:170px" />
+					</colgroup>
+					<thead>
+						<tr>
+							<th scope="col">NO</th>
+							<th scope="col">제목</th>
+							<th scope="col">상태</th>
+							<th scope="col">작성일</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!! [종료]셀퓨전씨 온라인 최저가 특별 이벤트 실시!!메디스킨 윈터패키지 이벤트 추석연휴 배송안내</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!!</a>
+							</td>
+							<td class="status"><span class="com">답변완료</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!! [종료]셀퓨전씨 온라인 최저가 특별 이벤트 실시!!메디스킨 윈터패키지 이벤트 추석연휴 배송안내</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!!</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!! [종료]셀퓨전씨 온라인 최저가 특별 이벤트 실시!!메디스킨 윈터패키지 이벤트 추석연휴 배송안내</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!!</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!! [종료]셀퓨전씨 온라인 최저가 특별 이벤트 실시!!메디스킨 윈터패키지 이벤트 추석연휴 배송안내</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!!</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!! [종료]셀퓨전씨 온라인 최저가 특별 이벤트 실시!!메디스킨 윈터패키지 이벤트 추석연휴 배송안내</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+						<tr>
+							<td class="num">196</td>
+							<td class="subject">
+								<a href="#">2016년 메디스킨 온라인 최저가 이벤트!!</a>
+							</td>
+							<td class="status"><span>문의중</span></td>
+							<td class="date">2016.07.27</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			<div class="pagination">
+				<a href="#" class="pageNavi pageStart">처음으로</a>
+				<a href="#" class="pageNavi pagePrev">이전</a>
+				<span class="pageNum">
+					<strong>1</strong>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">4</a>
+					<a href="#">5</a>
+					<a href="#">6</a>
+					<a href="#">7</a>
+					<a href="#">8</a>
+					<a href="#">9</a>
+				</span>
+				<a href="#" class="pageNavi pageNext">다음</a>
+				<a href="#" class="pageNavi pageEnd">끝으로</a>
+			</div>
+
+			<br /><br />
+
+			<section class="bbsView">
+				<table class="viewHead">
+					<caption>게시물 정보</caption>
+					<colgroup>
+						<col style="width:85px" />
+						<col />
+						<col style="width:70px" />
+						<col style="width:130px" />
+						<col style="width:70px" />
+						<col style="width:150px" />
+					</colgroup>
+					<tbody>
+						<tr>
+							<th scope="row"><span>제 목</span></th>
+							<td class="subject">메디스킨이 출시한 더마허브 화장품을 소개합니다.메디스킨이 출시한 더마허브 화장품을 소개합니다.메디스킨이 출시한 더마허브 화장품을 소개합니다.메디스킨이 출시한 더마허브 화장품을 소개합니다.</td>
+							<th scope="row"><span>상태</span></th>
+							<td class="status"><span class="com">답변완료</span></td>
+							<th scope="row"><span>날 짜</span></th>
+							<td>2016.08.01</td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="viewBody">
+					내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용<br /> 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용<br /> 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용<br /> 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용<br /> 내용내용 내용내용 내용내용 내용내용 내용내용 내용내용 내용
+
+					<div class="replyWrap">
+						<p class="replyHead">
+							<strong class="name">메디스킨 관리자</strong>
+							<span class="date">2016-07-20 15:45:43</span>
+						</p>
+						<p>안녕하세요 고객님<br />
+						메디스킨입니다. 저희 제품을 선택해 주셔서 감사합니다.<br />
+						문의 주신제품은 한방발효 화장품으로 어느피부에나 부담없이 바를수 있는 제품입니다.<br />
+						답변이 부족하셨을 경우, 메디스킨 고객센터 1588-5566으로 전화주시면 더우 상세한 제품 설명을 드리도록 하겠습니다.<br />
+						감사합니다.</p>
+					</div>
+
+				</div>
+				<div class="btnWrap btnRight">
+					<a href="#" class="btnM2 btnType6">목록</a>
+				</div>
+			</section>
+
+			<br /><br />
+			<div class="bbsWrite">
+				<table>
+					<caption>1:1 문의 작성</caption>
+					<colgroup>
+						<col style="width:130px" />
+						<col />
+					</colgroup>
+					<tbody>
+						<tr>
+							<th scope="row">제 목</th>
+							<td><input type="text" class="inputTxt" style="width:895px;" /></td>
+						</tr>
+						<tr>
+							<th scope="row">질문유형</th>
+							<td>
+								<select style="width:240px;">
+									<option>선택안함</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th scope="row">문의내용</th>
+							<td><textarea rows="10" cols="20" style="width:895px;height:400px;"></textarea></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="btnWrap btnBbs">
+				<a href="#" class="btnB btnType7">취 소</a>
+				<a href="#" class="btnB btnType2">문의하기</a>
+			</div>
+
+		</section>
 		</div>
 	</section>
 	<!-- //container -->
