--- a/layout.html
+++ b/layout.html
@@ -137,6 +137,11 @@
 			<label class="radioB"><input type="radio" name="sample" class="inputChk" /> <span>디자인 라디오</span></label>
 
 			<hr>
+	
+			<p class="txtColor">텍스트 컬러</p>
+			<p class="txtColor2">텍스트 컬러2</p>
+
+			<hr>
 
 			<p>
 				<button type="button" class="btnM btnType1">버튼타입1</button>
@@ -173,12 +178,32 @@
 				<a href="#" class="btnB btnType7">링크</a>
 			</p>
 			<br />
+			<p> 
+				<button type="button" class="btnB2 btnType8">버튼타입8</button>
+				<a href="#" class="btnB2 btnType8">링크</a>
+			</p>
+			<br />
+			<p> 
+				<button type="button" class="btnB2 btnType9">버튼타입9</button>
+				<a href="#" class="btnB2 btnType9">링크</a>
+			</p>
+			<br />
+			<p> 
+				<button type="button" class="btnS2 btnType10">버튼타입10</button>
+				<a href="#" class="btnS2 btnType10">링크</a>
+			</p>
+			<br />
+				<button type="button" class="btnB2 btnType11">버튼타입10</button>
+				<a href="#" class="btnB2 btnType11">링크</a>
+			</p>
+			<br />
 			<p>
 				<a href="#" class="btnB btnFacebook" style="width:250px;">페이스북 로그인</a>
 				<a href="#" class="btnB btnNaver" style="width:250px;">네이버 로그인</a>
 			</p>
 
 			<hr>
+
 			<div class="tabList tabItem4">
 				<ul>
 					<li class="current"><a href="#">취소/환불/반품안내</a></li>
@@ -377,6 +402,7 @@
 			</section>
 
 			<br /><br />
+
 			<div class="bbsWrite">
 				<table>
 					<caption>1:1 문의 작성</caption>
@@ -409,7 +435,6 @@
 				<a href="#" class="btnB btnType2">문의하기</a>
 			</div>
 
-		</section>
 		</div>
 	</section>
 	<!-- //container -->
