--- a/join2.html
+++ b/join2.html
@@ -108,48 +108,65 @@
 
 	<!-- container -->
 	<section id="container">
-		<div class="pageHead">
-			<h1 class="pageTitle">결제완료</h1>
-			<ol class="orderProgress">
-				<li>01 장바구니</li>
-				<li>02 주문/결제</li>
-				<li class="current">03 결제완료</li>
-			</ol>
-		</div>
 		<div class="contents">
-
-			<p class="orderComTxt"><span>결제가 완료되었습니다.</span></p>
-			<div class="tableList tableListType2">
-				<table>
-					<caption>주문정보</caption>
-					<colgroup>
-						<col style="width:130px" />
-						<col style="width:400px" />
-						<col style="width:130px" />
-						<col />
-					</colgroup>
-					<tbody>
-						<tr>
-							<th scope="row">주문일자</th>
-							<td>2016-08-01 오전 11:45:45</td>
-							<th scope="row">주문번호</th>
-							<td class="txtColor2">20160801_100028055</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<ul class="orderComList">
-				<li>- 오후3시이전 결제하실경우 당일 출고됩니다.  3시이후 결제하신분은 익일 3시에 일괄배송됩니다.</li>
-				<li>- 주문하신 내역은 마이페이지>주문배송안내 에서 확인하실 수 있습니다. </li>
-				<li>- 예상적립포인트는 실결제금액 기준으로 배송완료후 적립되니다.</li>
-			</ul>
-
-
-			<div class="btnWrap">
-				<a href="#" class="btnB2 btnType11">주문내역 확인하기</a>
-				<a href="#" class="btnB2 btnType8">쇼핑 계속하기</a>
-			</div>
-
+			<h1 class="memTitle">회원가입</h1>
+			<fieldset class="joinField">
+				<legend>회원가입 정보 입력</legend>
+				<p><input type="text" class="inputTxt" style="width:388px;" placeholder="이메일 아이디" /></p>
+				<p><input type="password" class="inputTxt" style="width:388px;" placeholder="비밀번호" /></p>
+				<p><input type="password" class="inputTxt" style="width:388px;" placeholder="비밀번호 확인" /></p>
+				<p class="tip">6~15자의 영문 대소문자, 숫자 사용, 연속된 숫자 문자는 제한 합니다.</p>
+				<div class="agreeWrap">
+					<p><label><input type="checkbox" class="inputChk" /> 전체동의</label></p>
+					<p>
+						<label><input type="checkbox" class="inputChk" /> 이용약관 동의(필수)</label>
+						<button type="button" class="conOpen">내용보기</button>
+					</p>
+					<div class="agreeCon">
+					</div>
+					<p>
+						<label><input type="checkbox" class="inputChk" /> 개인정보 수집 및 이용동의(필수)</label>
+						<button type="button" class="conOpen">내용보기</button>
+					</p>
+					<div class="agreeCon">
+						<table class="tableType">
+							<caption>수집 항목</caption>
+							<colgroup>
+								<col style="width:115px" />
+								<col />
+							</colgroup>
+							<tbody>
+								<tr>
+									<th scope="row">구분</th>
+									<td>필수</td>
+								</tr>
+								<tr>
+									<th scope="row">목적</th>
+									<td>이용자 식별, 서비스 이행을 위한 연락</td>
+								</tr>
+								<tr>
+									<th scope="row">항목</th>
+									<td>이름, 아이디, 비밀번호, 이메일</td>
+								</tr>
+								<tr>
+									<th scope="row">보유 및 이용기간</th>
+									<td>회원탈퇴 후 5일까지</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<p>
+						<label><input type="checkbox" class="inputChk" /> 이메일 수신동의(선택)</label>
+						<button type="button" class="conOpen">내용보기</button>
+					</p>
+					<div class="agreeCon" style="display:block;">
+						<p>이메일 수신동의 내용을 적어주세요.<br />이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.이메일 수신동의 내용을 적어주세요.</p>
+					</div>
+				</div>
+				<div class="btnWrap">
+					<button type="submit" class="btnB btnType2">회원가입</button>
+				</div>
+			</fieldset>
 		</div>
 	</section>
 	<!-- //container -->
@@ -206,8 +223,9 @@
 		</div>
 	</footer>
 	<!-- //footer -->
+
 	<script type="text/javascript">
-	menu(0); // 메뉴활성화
+	menu(2,1); // 메뉴활성화
 	</script>
 
 </body>
