--- a/layout.html
+++ b/layout.html
@@ -194,8 +194,24 @@
 				<a href="#" class="btnS2 btnType10">링크</a>
 			</p>
 			<br />
-				<button type="button" class="btnB2 btnType11">버튼타입10</button>
+			<p>
+				<button type="button" class="btnB2 btnType11">버튼타입11</button>
 				<a href="#" class="btnB2 btnType11">링크</a>
+			</p>
+			<br />
+			<p>
+				<button type="button" class="btnB3 btnType12">버튼타입12</button>
+				<a href="#" class="btnB3 btnType12">링크</a>
+			</p>
+			<br />
+			<p>
+				<button type="button" class="btnB3 btnType13">버튼타입13</button>
+				<a href="#" class="btnB3 btnType13">링크</a>
+			</p>
+			<br />
+			<p>
+				<button type="button" class="btnB3 btnType14">버튼타입14</button>
+				<a href="#" class="btnB3 btnType14">링크</a>
 			</p>
 			<br />
 			<p>
