--- a/prod_detail.html
+++ b/prod_detail.html
@@ -108,17 +108,183 @@
 
 	<!-- container -->
 	<section id="container">
+		<div class="pageHead">
+			<h1 class="pageTitle">장바구니</h1>
+			<p class="location">
+				<a href="#">Home</a> &gt;
+				<span>products</span>
+			</p>
+		</div>
 		<div class="contents">
-			<h1 class="memTitle">회원가입</h1>
-			<div class="joinWrap">
-				<p><a href="#" class="btnB btnFacebook">페이스북 로그인</a></p>
-				<p><a href="#" class="btnB btnNaver">네이버 로그인</a></p>
-				<fieldset class="joinField">
-					<legend>회원가입 정보 입력</legend>
-					<p><input type="text" class="inputTxt" style="width:388px;" placeholder="이메일 아이디" /></p>
-					<button type="submit" class="btnB btnType2">이메일로 회원가입</button>
-				</fieldset>
+
+			<section class="prodDetailTop">
+				<div class="prodDetailImg">
+					<p class="prodSimg"><img src="images/img_sample4.jpg" alt="" /></p>
+					<p class="prodBimg"><img src="images/img_sample4.jpg" alt="" /></p>
+					<p class="prodOpt">
+						<strong class="type">모든피부용</strong>
+						<span class="point">
+							<span class="point4">4점</span>
+							리뷰(<b>20</b>)
+						</span>
+						<span class="share">
+							<a href="#"><img src="images/btn_facebook2.gif" alt="페이스북" /></a>
+							<a href="#"><img src="images/btn_kakao.gif" alt="카카오톡" /></a>
+							<a href="#"><img src="images/btn_url.gif" alt="URL" /></a>
+						</span>
+					</p>
+				</div>
+				<div class="prodDetailInfo">
+					<h1 class="name">
+						<span>[카스마라]</span>
+						바디모이스쳐라이징 500ML
+					</h1>
+					<p class="txt">
+						단계 : 탄력 저하 피부용 크림<br />
+						기능 : 영양 공급 및 피부 장벽 강화<br />
+						영양 공급 및 피부 장벽 강화영양 공급 및 
+					</p>
+					<table>
+						<caption>제품 정보</caption>
+						<colgroup>
+							<col style="width:140px" />
+							<col />
+						</colgroup>
+						<tbody>
+							<tr>
+								<th scope="row">제조사</th>
+								<td>더마펌</td>
+							</tr>
+							<tr>
+								<th scope="row">원산지</th>
+								<td>한국</td>
+							</tr>
+							<tr>
+								<th scope="row">용량</th>
+								<td>30ml</td>
+							</tr>
+							<tr>
+								<th scope="row">시중가격</th>
+								<td>129,000원</td>
+							</tr>
+							<tr>
+								<th scope="row">판매가격</th>
+								<td><strong class="price">129,000</strong>원</td>
+							</tr>
+							<tr>
+								<th scope="row">포인트</th>
+								<td><strong>6,450포인트</strong></td>
+							</tr>
+							<tr>
+								<th scope="row">수량</th>
+								<td>
+									<span class="option">
+										<button type="button" class="minus">상품빼기</button>
+										<button type="button" class="plus">상품더하기</button>
+										<span>1</span>
+									</span>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<div class="btnWrap">
+						<span><a href="#" class="btnB3 btnType13">바로구매</a></span>
+						<span><a href="#" class="btnB3 btnType14"><img src="images/btn_n_pay.gif" alt="N pay" />구매</a></span>
+						<span><a href="#" class="btnB3 btnType12">장바구니</a></span>
+						<span><a href="#" class="btnB3 btnType11">위시리스트</a></span>
+					</div>
+				</div>
+			</section>
+
+			<div class="prodListWrap">
+				<section>
+					<h2>브랜드별 인기상품</h2>
+					<div class="prodList">
+						<ul class="prodListType2">
+							<li>
+								<span class="thumb">
+									<img src="images/img_sample.gif" alt="" />
+									<a href="#" class="basket">장바구니</a>
+								</span>
+								<a href="#" class="prodLink">
+									<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+									<del>42,000원</del>
+									<strong class="sale">35,000원</strong>
+								</a>
+							</li>
+							<li>
+								<span class="thumb">
+									<img src="images/img_sample.gif" alt="" />
+									<a href="#" class="basket">장바구니</a>
+								</span>
+								<a href="#" class="prodLink">
+									<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+									<strong class="price">35,000원</strong>
+								</a>
+							</li>
+							<li>
+								<span class="thumb">
+									<img src="images/img_sample.gif" alt="" />
+									<a href="#" class="basket">장바구니</a>
+								</span>
+								<a href="#" class="prodLink">
+									<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+									<del>42,000원</del>
+									<strong class="sale">35,000원</strong>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<p class="listNavi">
+						<button type="button" class="active">1</button>
+						<button type="button">2</button>
+					</p>
+				</section>
+				<section>
+					<h2>함께쓰면 좋은 상품</h2>
+					<div class="prodList">
+						<ul class="prodListType2">
+							<li>
+								<span class="thumb">
+									<img src="images/img_sample.gif" alt="" />
+									<a href="#" class="basket">장바구니</a>
+								</span>
+								<a href="#" class="prodLink">
+									<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+									<del>42,000원</del>
+									<strong class="sale">35,000원</strong>
+								</a>
+							</li>
+							<li>
+								<span class="thumb">
+									<img src="images/img_sample.gif" alt="" />
+									<a href="#" class="basket">장바구니</a>
+								</span>
+								<a href="#" class="prodLink">
+									<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+									<strong class="price">35,000원</strong>
+								</a>
+							</li>
+							<li>
+								<span class="thumb">
+									<img src="images/img_sample.gif" alt="" />
+									<a href="#" class="basket">장바구니</a>
+								</span>
+								<a href="#" class="prodLink">
+									<span class="txt">[히스토랩] 페이드 아웃<br /> 히스토 K크림 12ml </span>
+									<del>42,000원</del>
+									<strong class="sale">35,000원</strong>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<p class="listNavi">
+						<button type="button" class="active">1</button>
+						<button type="button">2</button>
+					</p>
+				</section>
 			</div>
+
 		</div>
 	</section>
 	<!-- //container -->
